--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,24 @@
-name: ci
+# name: ci
 
-on:
-  push:
-    branches:
-      - master
-  schedule:
-    - cron: "0 0 * * *"
+# on:
+#   push:
+#     branches:
+#       - master
+#   schedule:
+#     - cron: "0 0 * * *"
 
-jobs:
-  autogreen:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone repository
-        uses: actions/checkout@v2
+# jobs:
+#   autogreen:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Clone repository
+#         uses: actions/checkout@v2
 
-      - name: Auto green
-        run: |
-          git config --local user.email "stillba@icloud.com"
-          git config --local user.name "joriewong"
-          git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-          git pull --rebase
-          git commit --allow-empty -m "a commit a day keeps your girlfriend away"
-          git push
+#       - name: Auto green
+#         run: |
+#           git config --local user.email "stillba@icloud.com"
+#           git config --local user.name "joriewong"
+#           git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+#           git pull --rebase
+#           git commit --allow-empty -m "a commit a day keeps your girlfriend away"
+#           git push
